Fixed overflow webpage with high input numbers

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     height: 100vh;
+    width: max-content;
     flex-direction: column;
     align-items: center;
     /* display: grid;
